--- a/export.dist
+++ b/export.dist
@@ -1,2 +1,5 @@
 export HUBOT_SLACK_TOKEN="xoxb-xxxx"
 export FILE_BRAIN_FILE="data/brain.json"
+export HUBOT_AUTH_ADMIN="mose"
+export HUBOT_LOG_LEVEL="info"
+export HUBOT_BASE_URL="http://localhost:8080/"
