--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "author": "mose <mose@mose.com>",
   "description": "An experimental semi-sentient being.",
   "dependencies": {
+    "hubot-auth": "^2.0.0",
+    "hubot-reload-scripts": "^0.1.2",
     "hubot-slack": "^4.0.2"
   },
   "engines": {
