--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "author": "mose <mose@mose.com>",
   "description": "An experimental semi-sentient being.",
   "dependencies": {
+    "coffee-script": "^1.6.3",
     "hubot-auth": "^2.0.0",
+    "hubot-cron-events": "^0.1.2",
     "hubot-reload-scripts": "^0.1.2",
     "hubot-slack": "^4.0.2"
   },
