--- a/export.dist
+++ b/export.dist
@@ -3,3 +3,4 @@ export FILE_BRAIN_FILE="data/brain.json"
 export HUBOT_AUTH_ADMIN="mose"
 export HUBOT_LOG_LEVEL="info"
 export HUBOT_BASE_URL="http://localhost:8080/"
+export IP_WATCHER=""
