--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zubot",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "author": "mose <mose@mose.com>",
   "description": "An experimental semi-sentient being.",
@@ -8,6 +8,7 @@
     "coffee-script": "^1.6.3",
     "hubot-auth": "^2.0.0",
     "hubot-cron-events": "^0.1.2",
+    "hubot-at-events": ">= 0.1.0",
     "hubot-reload-scripts": "^0.1.2",
     "hubot-slack": "^4.0.2"
   },
