--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "hubot-gitter2": "^0.1.3",
     "hubot-help": "^0.2.0",
     "hubot-reload-scripts": "^0.1.2",
+    "hubot-shell": "^1.0.2",
     "hubot-slack": "^4.0.2"
   },
   "engines": {
