--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "hubot-cron-events": "^0.1.2",
     "hubot-gitter2": "^0.1.3",
     "hubot-help": "^0.2.0",
+    "hubot-irc": "^0.2.9",
     "hubot-reload-scripts": "^0.1.2",
-    "hubot-shell": "^1.0.2",
     "hubot-slack": "^4.0.2"
   },
   "engines": {
