--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "author": "mose <mose@mose.com>",
   "description": "An experimental semi-sentient being.",
   "dependencies": {
-    "coffee-script": "^1.6.3",
+    "coffee-script": "~1.6.3",
     "hubot-at-events": ">= 0.1.0",
+    "hubot": "*",
     "hubot-auth": "^2.0.0",
     "hubot-cron-events": "^0.1.2",
+    "hubot-es-logger": "^0.1.0",
     "hubot-gitter2": "^0.1.3",
     "hubot-help": "^0.2.0",
     "hubot-irc": "^0.2.9",
-    "hubot-reload-scripts": "^0.1.2",
-    "hubot-slack": "^4.0.2"
+    "hubot-reload-scripts": "^0.1.2"
   },
   "engines": {
     "node": "0.10.x"
