--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "hubot-es-logger": "^0.1.0",
     "hubot-gitter2": "^0.1.3",
     "hubot-help": "^0.2.0",
-    "hubot-irc": "^0.2.9",
+    "hubot-irc": "= 0.2.8",
     "hubot-reload-scripts": "^0.1.2"
   },
   "engines": {
