add npm to packages

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "hubot-reload-scripts": "^0.1.2"
   },
   "engines": {
-    "node": "0.10.x"
+    "node": "0.10.x",
+    "npm": ">= 1.1.x"
   },
   "scripts": {
     "start": "/app/bin/hubot -l . -a irc"
