--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "hubot-gitter2": "^0.1.3",
     "hubot-help": "^0.2.0",
     "hubot-irc": "= 0.2.8",
-    "hubot-reload-scripts": "^0.1.2"
+    "hubot-reload-scripts": "^0.1.2",
+    "npm": ">= 1.1.x"
   },
   "engines": {
     "node": "0.10.x",
