--- a/export.dist
+++ b/export.dist
@@ -27,3 +27,4 @@ export ES_LOG_ES_URL="http://localhost:9200/"
 # export ES_LOG_KIBANA_TEMPLATE="irclogger"
 export ES_LOG_INDEX_NAME="irclog"
 export ES_LOG_ENABLED="true"
+export ES_LOG_SINGLE_INDEX="true" 
