--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
     "hubot-at-events": ">= 0.1.0",
     "hubot": "*",
     "hubot-auth": "^2.0.0",
-    "hubot-cron-events": "^0.1.2",
-    "hubot-es-logger": "^0.1.0",
-    "hubot-gitter2": "^0.1.3",
     "hubot-help": "^0.2.0",
     "hubot-irc": "= 0.2.8",
+    "hubot-pager-v2": "^0.0.1",
     "hubot-reload-scripts": "^0.1.2",
     "npm": ">= 1.1.x"
   },
