--- a/export.dist
+++ b/export.dist
@@ -31,3 +31,10 @@ export ES_LOG_SINGLE_INDEX="true"
 
 export HUBOT_HELP_REPLY_IN_PRIVATE="true"
 export REDIS_URL=redis:///var/run/redis/redis.sock?hubot
+
+# gitlab
+export MEETBOT_GITLAB_URL="https://gitlab.com"
+export MEETBOT_GITLAB_APIKEY=""
+export MEETBOT_GITLAB_REPO=""
+export MEETBOT_GITLAB_FILEPATH="minutes/%s-%s.md"
+export MEETBOT_GITLAB_DATEFORMAT="YYYY-MM-DD"
