env for testing meetbot on github

--- a/export.dist
+++ b/export.dist
@@ -38,3 +38,10 @@ export MEETBOT_GITLAB_APIKEY=""
 export MEETBOT_GITLAB_REPO=""
 export MEETBOT_GITLAB_FILEPATH="minutes/%s-%s.md"
 export MEETBOT_GITLAB_DATEFORMAT="YYYY-MM-DD"
+
+# github
+export MEETBOT_GITHUB_ORG=""
+export MEETBOT_GITHUB_APIKEY=""
+export MEETBOT_GITHUB_REPO=""
+export MEETBOT_GITHUB_FILEPATH="minutes/%s-%s.md"
+export MEETBOT_GITHUB_DATEFORMAT="YYYY-MM-DD"
